# atlas-people-analytics

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
airflow/dags/: atlas_people_analytics.py
api/: __init__.py  metrics_service.py  settings.py  snowflake_client.py
dashboard/: __init__.py  app.py
dbt_project/: .gitignore  README.md  dbt_project.yml  profiles.yml.template
dbt_project/fixtures/: first_name_root.yml  normalize_name.yml
dbt_project/macros/: first_name_root.sql  match_confidence.sql  normalize_name.sql  privacy.sql
dbt_project/models/staging/: _sources.yml  _staging.yml
dbt_project/seeds/: _seeds.yml  nickname_map.csv
dbt_project/tests/macros/: test_first_name_root.sql  test_normalize_name.sql  test_privacy_macros.sql
dbt_project/tests/marts/: dim_employee__covers_hris_spells.sql  dim_employee__no_overlapping_effective_dates.sql  fct_workforce_daily__active_one_row_per_person_day.sql  fct_workforce_daily__date_bounds_valid.sql  privacy_suppression_summary__matches_public_surfaces.sql  (+5 more)
docs/: 00-demo-script.md  07-ml-residuals.md  07-residual-review.md  atlas-a-to-z-source-walkthrough.md
docs/interview/: edward-demo-talk-track.md  live-demo-checklist.md  one-page-brief.md  productionization-and-metric-catalog.md  reviewer-release-note.md  source-freshness-and-reconciliation.md  sql-answer-walkthroughs.md  sql-practice.md  two-minute-demo-script.md  wealthsimple-30-60-90.md  wealthsimple-role-map.md
docs/walkthroughs/: identity-drift-example.md  residual-model-evaluation.md  residual-ranking-evaluation.md  residual-review-report.md  residual-review-walkthrough.md
identity_engine/: __init__.py  cli.py  evaluation.py  residual_matcher.py  snowflake_io.py
infra/snowflake/: 00_provision.sql  01_raw_tables.sql
seeds/: __init__.py  lifecycle.py  name_strategies.py  synthesize.py
tests/: test_phase4_api.py  test_phase4_dag_dashboard.py  test_phase5_residual_matcher.py
(+15 files in other folders)
